# dynaworld

./: .gitignore  .gitmodules  AGENTS.md  DATASET_V1.md  README.md  get_camera.sh  pyproject.toml  train_full_dynamic_with_camera_prebake_all_frames.sh  train_full_dynamic_with_image_encoder_implicit_camera_baseline.sh  train_full_dynamic_with_implicit_camera_all_frames.sh  train_full_dynamic_with_video_token_implicit_camera_all_frames.sh  train_smoke_dynamic_with_video_token_implicit_camera.sh
TODO/: Clean_up_and_unify_interfaces.md  readme_and_positioning_followups.md  reduce_render_memory_usage.md  video_token_implicit_camera_followups.md
agent_notes/: key_learnings.md
data/: README.md
paper_notes/: implicit_splat_cameras.md  notes_1.md  notes_2.md
research_notes/: KEY_ARCHITECTURE_DECISIONS.md  README.md  TRAINER_INTERFACE_CLEANUP_2026_04_20.md  blur_dof_motion_paper_review.md  camera_ray_contract.md  fast_mac_gsplat_fastpath_real_world_handoff.md  potential_directions_index.md  thread_2.txt  three_architectures_for_novel_view_synthesis.md  training_contract_v1.md  video_model_bootstrap_architectures.md
soul_documents/: voice.md
submodules/fast-mac-gsplat-fastpath/: README.md  pyproject.toml  setup.py
submodules/fast-mac-gsplat-fastpath/csrc/metal/: gsplat_fast_kernels.metal
test_data/: catalogue.md  ffmpeg_command.txt
train_scripts/: camera.py  dynamicTokenGS.py  dynamicTokenGS_shared.py  dynamicTokenGS_tiled.py  fast_attn.py  image_utils.py  run_dust3r_video.py  tokenGS.py  tokenGS_shared.py  tokenGS_tiled.py  train_camera_implicit_dynamic.py  (+2 more)
(+285 files in other folders)
